--- a/MultiSelectorDemo/Components/DlgModal.razor
+++ b/MultiSelectorDemo/Components/DlgModal.razor
@@ -1,6 +1,6 @@
 ﻿@rendermode InteractiveServer
 <div class="@modalClass" tabindex="-1" role="dialog" style="@modalDisplay">
-    <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">@Title</h5>
