--- a/MultiSelectorDemo/Components/ListSelector.razor.css
+++ b/MultiSelectorDemo/Components/ListSelector.razor.css
@@ -1,53 +1,41 @@
 ﻿.list-selector {
-    height: 20rem;
+    width: 29rem;
+    height: 24rem;
     display: grid;
-    grid-template-columns: 1fr auto auto 1fr auto;
-    grid-template-rows: auto auto auto repeat(4 1fr);
-}
-.ns-lbl {
-    grid-area: 1 / 1 / 2 / 3;
-    align-self: end;
-}
-.s-lbl {
-    grid-area: 1 / 4 / 2 / 6;
-    align-self: end;
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-rows: min-content repeat(4 1fr);
 }
 .ns-filter {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-area: 1 / 1 / 2 / 2;
     align-self: center;
+}
+.filter-text {
+    width: 9.25rem;
 }
 .s-filter {
-    grid-area: 2 / 4 / 3 / 5;
-    align-self: center;
-}
-.ns-apply-filter {
-    grid-area: 2 / 2 / 3 / 3;
-    align-self: center;
-}
-.s-apply-filter {
-    grid-area: 2 / 5 / 3 / 6;
+    grid-area: 1 / 3 / 2 / 4;
     align-self: center;
 }
 .ns-list {
-    grid-area: 3 / 1 / 7 / 3;
+    grid-area: 2 / 1 / 6 / 2;
 }
 .s-list {
-    grid-area: 3 / 4 / 7 / 6;
+    grid-area: 2 / 3 / 6 / 4;
 }
 .rem-all {
-    grid-area: 6 / 3 / 7 / 4;
+    grid-area: 5 / 2 / 6 / 3;
     place-self: center center;
 }
 .sel-all {
-    grid-area: 3 / 3 / 4 / 4;
+    grid-area: 2 / 2 / 3 / 3;
     place-self: center center;
 }
 .rem {
-    grid-area: 5 / 3 / 6 / 4;
+    grid-area: 4 / 2 / 5 / 3;
     place-self: center center;
 }
 .sel {
-    grid-area: 4 / 3 / 5 / 4;
+    grid-area: 3 / 2 / 4 / 3;
     place-self: center center;
 }
 .sel-list {
